# multi_modal

./: .gitignore  README.md  app.py  env_utils.py  main.py  pyproject.toml
config/: settings.py
core/: chat_chain.py  history_manager.py  multimodal_parser.py
utils/: exceptions.py  logger.py
web/: app_gradio.py
