[project]
name = "multiple-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "addict>=2.4.0",
    "datasets>=5.0.0",
    "gradio==5.31.0",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.0",
    "modelscope>=1.37.1",
    "pillow>=11.3.0",
    "requests>=2.34.2",
    "torch>=2.12.0",
    "transformers>=5.11.0",
]
